--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h3>Welcome</h3>
-    <button type="submit">Sign Up</button>
-    <button type="submit">Sign In</button>
-    <button type="submit">Sign Out</button>
+    <button type="submit"><a href="/signup">Sign Up</a></button>
+    <button type="submit"><a href="/signin">Sign In</a></button>
+    <button type="submit"><a href="/signout">Sign Out</a></button>
   </body>
 </html>
